--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1407,6 +1407,13 @@ small.search_term {
   word-break: initial; }
 
 /* Data table */
+.table-rows-pagination {
+  text-align: right; }
+
+.table-rows-pagination form,
+.table-rows-pagination .table-pagination {
+  display: inline-block; }
+
 #data-table th * {
   color: #000; }
 
