--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -243,7 +243,7 @@ nav .dropdown-toggle {
     margin-bottom: .5em;
 }
 
-.breadcrumbs, .quicksearch {
+.breadcrumbs {
     border: 1px solid #ccccdd;
     background-color: #fff;
 }
@@ -253,7 +253,7 @@ nav .dropdown-toggle {
 }
 
 .quicksearch-container {
-    margin: -1em;
+    margin-top: -1em;
     padding-right: 0; // line up with crumbs
 }
 
@@ -262,14 +262,14 @@ nav .dropdown-toggle {
 }
 
 .quicksearch input {
-    width: 70%;
+    width: 85%;
     display: inline-block;
-    height: auto;
+    height: 2em;
 }
 
 .quicksearch button {
-    font-size: 1.4em;
-    margin-top: -.1em;
+    line-height: 2em;
+    vertical-align: top;
 }
 
 .breadcrumbs {
