--- a/views/data.tt
+++ b/views/data.tt
@@ -60,12 +60,15 @@
                             [% END %]
                             <li role="presentation"><a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_alert">Alert me</a></li>
                         [% END %]
+                        [% IF user.permission.layout %]
+                            <li role="presentation"><a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_views_other_user">Manage views of another user...</a></li>
+                        [% END %]
                         <li role="presentation"><a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_rewind">Historic view...</a></li>
                         <li role="presentation" class="divider"></li>
                         [% first = 1 %]
                         [% FOREACH ve IN user_views %]
                             [% IF first AND NOT ve.global AND not ve.is_admin %]
-                                <li role="presentation" class="dropdown-header">Personal views</li>
+                                <li role="presentation" class="dropdown-header">[% IF views_other_user %]Views of [% views_other_user.value | html %][% ELSE %]Personal views[% END %]</li>
                             [% ELSIF (first AND ve.global) OR (lastv AND ve.global != lastv.global) %]
                                 [% UNLESS first %]
                                     <li role="presentation" class="divider"></li>
@@ -173,6 +176,22 @@
     [% END %]
 [% END %]
 
+[% IF user.permission.layout %]
+    [% IF views_other_user %][% modal_extra_action = "views_other_user_clear" %][% END %]
+    [% WRAPPER modal_dialog.tt
+        modal_id="modal_views_other_user" modal_action_text="Submit" modal_heading="Manage views of other user"
+        modal_with_cancel_button = 1 modal_with_form = 1 modal_form_method = "post" modal_extra_action = modal_extra_action
+        modal_extra_action_text = "Reset to my views"
+    %]
+        <div class="form-group">
+            <label for="views_other_user_id">Select user:</label>
+                <input type="hidden" name="views_other_user_id" id="views_other_user_id" value="[% views_other_user.id %]">
+                <input type="text" class="form-control" id="views_other_user_typeahead" autocomplete="off"
+                    name="views_other_user_typeahead" value="[% views_other_user.value %]" placeholder="Start typing...">
+        </div>
+    [% END %]
+[% END %]
+
 [% IF session.rewind %]
     [% reset_button = "modal_rewind_reset" %]
     [% submit_button = "Update" %]
@@ -236,4 +255,36 @@
             </select>
         </div>
     [% END %]
+[% END %]
+
+[% IF user.permission.layout %]
+    <script type="text/javascript">
+        jscode = jscode + '[% FILTER remove('[\n\r]+') %]
+            [% FILTER replace('\'', '\\\'') %]
+                $("#[% typeahead.id %]").change( function() {
+                    if (!($( this ).val()))
+                    {
+                        $("#[% typeahead.id %]_value").val("");
+                    }
+                });
+                $("#views_other_user_typeahead").typeahead({
+                    delay: 500,
+                    matcher: function () { return true; },
+                    sorter: function (items) { return items; },
+                    afterSelect: function (selected) {
+                        $("#views_other_user_id").val(selected.id);
+                    },
+                    source: function (query, process) {
+                        return $.ajax({
+                            type: 'GET',
+                            url: '/match/user/',
+                            data: { q: query },
+                            success: function(result) { process(result) },
+                            dataType: 'json'
+                        });
+                    }
+                });
+            [% END %]
+        [% END %]';
+    </script>
 [% END %]
