--- a/sass/_data-table.scss
+++ b/sass/_data-table.scss
@@ -33,6 +33,7 @@
 
 #data-table thead .popover {
     word-break: break-word;
+    overflow-wrap: break-word;
     margin-top: 1.2em;
     padding: .5em;
 }
