--- a/views/graph.tt
+++ b/views/graph.tt
@@ -85,6 +85,13 @@
                     </label>
                 </div>
             </div>
+            <div class="form-group">
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" name="as_percent" value="1" [% IF graph.as_percent %]checked[% END %]>Plot graph values as percentages
+                    </label>
+                </div>
+            </div>
         </div>
         <div class="col-md-6">
             <h4>X-axis</h4>
