--- a/sass/_data-table.scss
+++ b/sass/_data-table.scss
@@ -32,6 +32,7 @@
 }
 
 #data-table thead .popover {
+    word-break: keep-all;
     word-break: break-word;
     overflow-wrap: break-word;
     margin-top: 1.2em;
