--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1133,6 +1133,7 @@ small.search_term {
 
 .select-widget .form-control {
     height: auto;
+    margin-bottom: .2em;
 }
 
 .select-widget .form-control > * {
@@ -1198,7 +1199,8 @@ small.search_term {
 
 .select-widget .current {
     margin: 0 .5em;
-    width: 30em;
+    margin-top: .2em;
+    width: 27em;
     text-align: left;
     display: inline-block;
 }
@@ -1208,7 +1210,7 @@ small.search_term {
     padding: .5em;
 }
 
-.select-widget .available li {
+.select-widget .available .answer {
     border-bottom: 1px solid #ccc;
     margin: .5em 0;
     padding: .3em .2em;
@@ -1223,7 +1225,7 @@ small.search_term {
 }
 
 .select-widget .available .control {
-    width: 30em;
+    width: 26em;
     text-align: left;
     float: left;
 }
@@ -1249,6 +1251,7 @@ small.search_term {
     padding-top: .5em;
     border: 1px solid #c8c8c8;
     box-shadow: .5em .5em .5em .5em #000;
+    margin-bottom: 0;
 }
 
 #edit-form {
