--- a/views/edit.tt
+++ b/views/edit.tt
@@ -465,7 +465,7 @@
                     > <span [% label_style %]>[% label %]</span>
                 </label>
             </div>
-        [% ELSIF dispcol.type != "curval"  %]
+        [% ELSIF (dispcol.type != "curval" && dispcol.type != "enum") %]
             <label for="[% dispcol.id %]" [% label_style %]>
                 [% label %][% IF oldvalue %] (current value &quot;[% oldvalue %]&quot;)[% END %]
             </label>
@@ -497,31 +497,11 @@
     <div class="input_holder">
         <div class="row">
             <div class="[% IF dispcol.multivalue AND dispcol.has_multivalue_plus %]col-md-10[% ELSE %]col-md-12[% END %]">
-                [% IF dispcol.type == "enum" %]
-                    <select class="form-control [% IF dispcol.multivalue %]selectpicker [% END %]" name="[% field %]" id="[% dispcol.id %]" [% IF readonly %]disabled[% END %] [% IF dispcol.multivalue %]multiple[% END %]>
-                        [% IF dispcol.optional OR editvalue.deleted OR (record.current_id AND NOT editvalue.id) OR NOT record.current_id %]
-                            [% IF !dispcol.multivalue %]
-                                <option></option>
-                            [% END %]
-                        [% END %]
-                        [% IF dispcol.ordering == "desc" %]
-                            [% enumvals = dispcol.enumvals.sort('value').reverse %]
-                        [% ELSIF dispcol.ordering == "asc" %]
-                            [% enumvals = dispcol.enumvals.sort('value') %]
-                        [% ELSE %]
-                            [% enumvals = dispcol.enumvals %]
-                        [% END %]
-                        [% is_selected = 0 %]
-                        [% FOREACH enumval IN enumvals %]
-                            <option value="[% enumval.id %]" [% IF editvalue.id_hash.${enumval.id} %][% is_selected = 1 %]selected[% END %]>[% enumval.value | html_entity %]</option>
-                        [% END %]
-                        [% IF editvalue.id AND NOT is_selected AND !dispcol.multivalue %]
-                            <option value="[% editvalue.id %]" selected>[% editvalue.html %]</option>
-                        [% END %]
-                    </select>
-                [% ELSIF dispcol.type == "curval" %]
-                    [% PROCESS curval_column column = dispcol %]
-               [% ELSIF dispcol.type == "tree" %]
+            [% IF dispcol.type == "enum" %]
+                [% PROCESS enum_column %]
+            [% ELSIF dispcol.type == "curval" %]
+                [% PROCESS curval_column column = dispcol %]
+            [% ELSIF dispcol.type == "tree" %]
                     <input type="hidden" name="[% field %]" id="treeval_id[% dispcol.id %]" value="[% editvalue.id %]">
                     [% IF readonly %]
                         <div class="form-group">
@@ -736,44 +716,6 @@
     </div>
 [% END %]
 
-[% IF 0 %]
-    <input type="hidden" name="[% field %]" id="[% field %]">
-    <select class="form-control [% IF dispcol.has_subvalues %]selectpicker [% END %]"
-        name="[% field %]" id="[% dispcol.id %]" [% IF readonly %]disabled[% END %]
-        [% IF dispcol.has_subvalues %]
-            data-multiple-separator="; " data-window-padding="70"
-            [% IF dispcol.multivalue %]multiple[% END %]
-        [% END %]>
-        [% IF !dispcol.multivalue %]
-            [% IF dispcol.optional OR editvalue.deleted OR (record.current_id AND NOT editvalue.id) OR NOT record.current_id %]
-                <option></option>
-            [% END %]
-        [% END %]
-        [% IF page == "bulk" %]
-            [% enumvals = dispcol.all_values %]
-        [% ELSE %]
-            [% enumvals = dispcol.filtered_values %]
-        [% END %]
-        [% FOREACH enumval IN enumvals %]
-            [% UNLESS enumval.deleted %]
-                <option value="[% enumval.id %]" [% IF editvalue.id_hash.${enumval.id} %]selected[% END %]
-                    [% IF dispcol.has_subvalues %]
-                        title="[% enumval.mainvalue | html_entity %]" [%# only show main title in selection %]
-                        [%# custom content for each option in order to show tooltip text %]
-                        data-content="<span title='[% enumval.value | html_entity %]'>
-                            [% enumval.mainvalue | html_entity %]
-                            <small class='text-muted'>[% enumval.subvalue | html_entity %]</small>
-                            <span class='moreinfo' data-record-id='[% enumval.id %]'>Read more...</span>
-                        </span>"
-                    [% END %]
-                >
-                [% enumval.value | html_entity %]
-                </option>
-            [% END %]
-        [% END %]
-    </select>
-[% END %]
-
 [%  
     BLOCK curval_column;
         IF column.typeahead;
@@ -783,3 +725,109 @@
         END;
     END;
 %]
+
+[% BLOCK enum_multivalue_column %]
+    <div class="select-widget multi">
+        <input type="hidden" name="[% field %]" id="[% field %]_value">
+        <div id="[% field %]_label"class="select-widget-label">[% label %]</div>
+        <div class="form-group form-control">
+            <ul class="current">
+                <li class="none-selected">&lt;blank&gt;</li>
+            [% FOREACH value IN values %]
+                [% NEXT IF value.deleted %]
+                [% checked = editvalue.id_hash.${value.id} %]
+                [% value_id = field _ '_' _ value.id %]
+                <li [% !checked && 'hidden' %] data-list-item="[% value_id %]">[% value.value | html_entity %]</li>
+            [% END %]
+            </ul>
+            <span>
+                <button class="change" type="button" aria-controls="[% field %]_available_values" 
+                        aria-expanded="false" aria-describedby="[% field %]_label"
+                >
+                    Change 
+                    <span class="chevron expanded">&larr;</span>
+                    <span class="chevron collapsed">&rarr;</span>
+                </button>
+            </span>
+        </div>
+        <ul hidden class="available" id="[% field %]_available_values">
+        [% FOREACH value IN values %]
+            [% NEXT IF value.deleted %]
+            [% checked = editvalue.id_hash.${value.id} %]
+            [% value_id = field _ '_' _ value.id %]
+            <li class="answer">
+                <span class="control">
+                    <input id="[% value_id %]" type="checkbox" [% checked && 'checked' %]>
+                    <label id="[% value_id %]_label"for="[% value_id %]">[% value.value | html_entity %]</label>
+                    <div>[% value.subvalue | html_entity %]</div>
+                </span>
+                <span>
+                    <button type="button" class="more-info" data-record-id="[% value.id %]" aria-describedby="[% value_id %]_label">View details</button>
+                </span>
+            </li>
+        [% END %]
+        </ul>
+    </div>
+[% END %]
+
+[% BLOCK enum_singlevalue_column %]
+    <div class="select-widget single">
+        <input type="hidden" name="[% field %]" id="[% field %]_value">
+        <div id="[% field %]_label"class="select-widget-label">[% label %]</div>
+        <div class="form-group form-control">
+            <ul class="current">
+                <li class="none-selected">&lt;blank&gt;</li>
+            [% FOREACH value IN values %]
+                [% NEXT IF value.deleted %]
+                [% checked = editvalue.id_hash.${value.id} %]
+                [% value_id = field _ '_' _ value.id %]
+                <li [% !checked && 'hidden' %] data-list-item="[% value_id %]">[% value.value | html_entity %]</li>
+            [% END %]
+            </ul>
+            <span>
+                <button class="change" type="button" aria-controls="[% field %]_available_values" 
+                        aria-expanded="false" aria-describedby="[% field %]_label"
+                >
+                    Change 
+                    <span class="chevron expanded">&larr;</span>
+                    <span class="chevron collapsed">&rarr;</span>
+                </button>
+            </span>
+        </div>
+
+        <ul hidden class="available" id="[% field %]_available_values">
+        [% FOREACH value IN values %]
+            [% NEXT IF value.deleted %]
+            [% checked = editvalue.id_hash.${value.id} %]
+            [% value_id = field _ '_' _ value.id %]
+            <li class="answer">
+                <span class="control">
+                    <input id="[% value_id %]" type="radio" name="[% field %]_available_value" [% checked && 'checked' %]>
+                    <label id="[% value_id %]_label"for="[% value_id %]">[% value.value | html_entity %]</label>
+                    <div>[% value.subvalue | html_entity %]</div>
+                </span>
+                <span>
+                    <button type="button" class="more-info" data-record-id="[% value.id %]" aria-describedby="[% value_id %]_label">View details</button>
+                </span>
+            </li>
+        [% END %]
+        </ul>
+    </div>
+[% END %]
+
+
+[% BLOCK enum_column;
+    IF dispcol.ordering == "desc";
+        values = dispcol.enumvals.sort('value').reverse;
+    ELSIF dispcol.ordering == "asc";
+        values = dispcol.enumvals.sort('value');
+    ELSE;
+        values = dispcol.enumvals;
+    END;
+
+    IF dispcol.multivalue;
+        PROCESS enum_multivalue_column;
+    ELSE;
+        PROCESS enum_singlevalue_column;
+    END;
+END %]
